--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
+#Ignoring all files in PCB_Designs directory except for .brd and .sch files
+#This is done specifically to autosave files
+Hardware/*
+!*.brd
+!*.sch
+!*.zip
+
 # Ignore Mac DS_Store files in all directories
 .DS_Store
